--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "loadsh": "^0.0.4",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.3.2",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
