--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "loadsh": "^0.0.4",
+    "moment": "^2.29.4",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.3.2",
     "vue": "^2.6.14",
