--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "lib-flexible": "^0.3.2",
     "loadsh": "^0.0.4",
     "moment": "^2.29.4",
     "node-sass": "^8.0.0",
@@ -28,6 +29,9 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.29",
+    "postcss-loader": "^7.3.3",
+    "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
