--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.29",
     "postcss-loader": "^7.3.3",
+    "postcss-px-to-viewport": "^1.1.1",
     "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   },
